# cpp-llamalib

./: .gitignore  CMakeLists.txt  README.md  cpp-llamalib.h  justfile
.github/workflows/: ci.yml  update-llama-cpp.yml
scripts/: update-llama-cpp.sh
tests/: test_generate.cpp
